fix: set default selected catalog while creating a new one
refs: #20

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/NewPasswordCatalogDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/NewPasswordCatalogDialog.xaml
@@ -17,14 +17,12 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-
         <StackPanel Orientation="Horizontal">
             <ComboBox ItemsSource="{Binding Path=AvailableCatalogs}"
-                      SelectedItem="{Binding Path=InitialCatalog, UpdateSourceTrigger=PropertyChanged}">
+                      SelectedItem="{Binding Path=InitialCatalog, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Margin="10"
-                                    Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal">
                             <Image Width="20"
                                    Source="../../Assets/folder.png"/>
                             <TextBlock Text="{Binding}"/>
