feat: implement a catalog creation
refs: #20

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/NewPasswordCatalogDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/NewPasswordCatalogDialog.xaml
@@ -17,7 +17,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal"
+                    Visibility="{Binding Path=HasCatalogs, Converter={StaticResource BoolToVisibilityConvereter}}">
             <ComboBox ItemsSource="{Binding Path=AvailableCatalogs}"
                       SelectedItem="{Binding Path=InitialCatalog, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <ComboBox.ItemTemplate>
