--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/NewPasswordCatalogDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/NewPasswordCatalogDialog.xaml
@@ -17,7 +17,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal"
+        <StackPanel Margin="10" 
+                    Orientation="Horizontal"
                     Visibility="{Binding Path=HasCatalogs, Converter={StaticResource BoolToVisibilityConvereter}}">
             <ComboBox ItemsSource="{Binding Path=AvailableCatalogs}"
                       SelectedItem="{Binding Path=InitialCatalog, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
@@ -26,7 +27,7 @@
                         <StackPanel Orientation="Horizontal">
                             <Image Width="20"
                                    Source="../../Assets/folder.png"/>
-                            <TextBlock Text="{Binding}"/>
+                            <TextBlock Text="{Binding Converter={StaticResource EmptyStringToRootFolderNameConverter}}"/>
                         </StackPanel>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
