--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
@@ -18,12 +18,13 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
+
+        <ContentControl x:Name="Root" />
+
         <TextBlock Text="{loc:StringResource Key='NewPassword'}"
                    Style="{StaticResource HeaderTextBlockStyle}"/>
 
         <ScrollViewer Grid.Row="1">
-
             <StackPanel Orientation="Vertical">
                 <StackPanel Orientation="Vertical" 
                             DataContext="{Binding PasswordValidator}">
@@ -49,6 +50,23 @@
                              AcceptsReturn="True"
                              Text="{Binding Path=Notes, Mode=TwoWay}"
                              PlaceholderText="Any notes like secret questions, references, etc." />
+
+                    <StackPanel Margin="10" 
+                                Orientation="Horizontal"
+                                Visibility="{Binding Path=DataContext.HasCatalogs, ElementName=Root, Converter={StaticResource BoolToVisibilityConvereter}}">
+                        <ComboBox ItemsSource="{Binding Path=DataContext.AvailableCatalogs, ElementName=Root}"
+                                  SelectedItem="{Binding Path=SelectedCatalog, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Width="20"
+                                               Source="../../Assets/folder.png"/>
+                                        <TextBlock Text="{Binding Converter={StaticResource EmptyStringToRootFolderNameConverter}}"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                    </StackPanel>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal"
