--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -88,12 +88,25 @@
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center">
 
-                            <TextBlock Text="{loc:StringResource Key=NoPasswordsYet}" />
-                            <Button Margin="10" 
-                                    Content="{loc:StringResource Key=AddPassword}"
-                                    HorizontalAlignment="Center"
-                                    Style="{StaticResource AccentButtonStyle}"
-                                    Command="{Binding Path=CreatePasswordCommand}"/>
+                            <TextBlock Text="{loc:StringResource Key=NoPasswordsYet}" 
+                                       HorizontalAlignment="Center"/>
+                            <StackPanel Orientation="Horizontal">
+                                <Button Margin="10" 
+                                        Content="{loc:StringResource Key=AddPassword}"
+                                        HorizontalAlignment="Center"
+                                        Style="{StaticResource AccentButtonStyle}"
+                                        Command="{Binding Path=CreatePasswordCommand}"/>
+
+                                <TextBlock Margin="5" 
+                                           VerticalAlignment="Center"
+                                           Text="{loc:StringResource Key=Or}"/>
+
+                                <Button Margin="10" 
+                                        Content="{loc:StringResource Key=AddNewCatalog}"
+                                        HorizontalAlignment="Center"
+                                        Style="{StaticResource AccentButtonStyle}"
+                                        Command="{Binding Path=CreateCatalogCommand}"/>
+                            </StackPanel>
 
                         </StackPanel>
                     </Grid>
