feat: implement removal of a catalog
refs: #20

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -70,6 +70,21 @@
                                               Label="{loc:StringResource Key=New}"
                                               Command="{Binding Path=CreateCatalogCommand}"
                                               ToolTipService.ToolTip="{loc:StringResource Key=AddNewCatalog}"/>
+
+                                <AppBarSeparator />
+
+                                <AppBarButton Icon="Edit" 
+                                              Label="{loc:StringResource Key=Edit}"
+                                              Command="{Binding Path=EditPasswordCommand}"
+                                              CommandParameter="{Binding SelectedItem}"
+                                              ToolTipService.ToolTip="{loc:StringResource Key=Edit}"/>
+                                
+                                <AppBarButton Icon="Delete" 
+                                              Label="{loc:StringResource Key=Delete}"
+                                              Command="{Binding Path=DeleteCommand}"
+                                              CommandParameter="{Binding SelectedItem}"
+                                              ToolTipService.ToolTip="{loc:StringResource Key=Delete}"/>
+
                             </CommandBar>
                         </Grid>
 
