feat: implement updating catalogs
refs: #20

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -62,25 +62,25 @@
                                         DefaultLabelPosition="Right">
 
                                 <AppBarButton Icon="Add" 
-                                              Label="{loc:StringResource Key=New}"
+                                              LabelPosition="Collapsed"
                                               Command="{Binding Path=CreatePasswordCommand}"
                                               ToolTipService.ToolTip="{loc:StringResource Key=AddNewPassword}"/>
 
                                 <AppBarButton Icon="NewFolder" 
-                                              Label="{loc:StringResource Key=New}"
+                                              LabelPosition="Collapsed"
                                               Command="{Binding Path=CreateCatalogCommand}"
                                               ToolTipService.ToolTip="{loc:StringResource Key=AddNewCatalog}"/>
 
                                 <AppBarSeparator />
 
                                 <AppBarButton Icon="Edit" 
-                                              Label="{loc:StringResource Key=Edit}"
+                                              LabelPosition="Collapsed"
                                               Command="{Binding Path=EditPasswordCommand}"
                                               CommandParameter="{Binding SelectedItem}"
                                               ToolTipService.ToolTip="{loc:StringResource Key=Edit}"/>
                                 
                                 <AppBarButton Icon="Delete" 
-                                              Label="{loc:StringResource Key=Delete}"
+                                              LabelPosition="Collapsed"
                                               Command="{Binding Path=DeleteCommand}"
                                               CommandParameter="{Binding SelectedItem}"
                                               ToolTipService.ToolTip="{loc:StringResource Key=Delete}"/>
