--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
@@ -33,6 +33,12 @@
                                       Header="{loc:StringResource Key='Autolock'}"/>
                         <TextBlock Style="{StaticResource CaptionTextBlockStyle}"
                                    Text="{loc:StringResource Key='AutolockDescription'}"/>
+                        <ComboBox DisplayMemberPath="Name"
+                                  SelectedValuePath="Name"
+                                  ItemsSource="{Binding Languages}"
+                                  Margin="{StaticResource ControlSectionMargin}"
+                                  SelectedItem="{Binding SelectedLanguage, Mode=TwoWay}"
+                                  Header="{loc:StringResource Key='ChooseApplicationLanguage'}"/>
                     </StackPanel>
                     <StackPanel Orientation="Vertical"
                                 Margin="{StaticResource ControlSectionMargin}">
