feat(search): add an action button to the filtration box
refs: #25

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Controls/ValidationPasswordBox.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Controls/ValidationPasswordBox.xaml
@@ -9,7 +9,7 @@
     </ResourceDictionary.ThemeDictionaries>
     <Thickness x:Key="PasswordBoxTopHeaderMargin">0,0,0,8</Thickness>
     <x:Double x:Key="PasswordBoxIconFontSize">12</x:Double>
-
+    <CornerRadius x:Key="PasswordBoxButtonCornerRadius">4</CornerRadius>
 
     <Style x:Name="RevealButtonStyle" TargetType="ToggleButton">
         <Setter Property="Template">
@@ -339,9 +339,9 @@
                             Password="{TemplateBinding Password}">
                         </PasswordBox>
 
-                        <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="2" Height="30" >
-                            <Button x:Name="CopyButton" Style="{StaticResource CopyButtonStyle}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="{TemplateBinding CornerRadius}" Padding="{ThemeResource HelperButtonThemePadding}" IsTabStop="False" Visibility="Visible" AutomationProperties.AccessibilityView="Raw" FontSize="{TemplateBinding FontSize}" Width="30" VerticalAlignment="Stretch" />
-                            <ToggleButton x:Name="RevealButton" Style="{StaticResource RevealButtonStyle}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="{TemplateBinding CornerRadius}" Padding="{ThemeResource HelperButtonThemePadding}" IsTabStop="False" Visibility="Visible" FontSize="{TemplateBinding FontSize}" VerticalAlignment="Stretch" Width="30" />
+                        <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,2,0,0" Height="32" >
+                            <Button x:Name="CopyButton" Style="{StaticResource CopyButtonStyle}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="{StaticResource PasswordBoxButtonCornerRadius}" Padding="{ThemeResource HelperButtonThemePadding}" IsTabStop="False" Visibility="Visible" AutomationProperties.AccessibilityView="Raw" FontSize="{TemplateBinding FontSize}" Width="32" VerticalAlignment="Stretch" />
+                            <ToggleButton x:Name="RevealButton" Style="{StaticResource RevealButtonStyle}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="{StaticResource PasswordBoxButtonCornerRadius}" Padding="{ThemeResource HelperButtonThemePadding}" IsTabStop="False" Visibility="Visible" FontSize="{TemplateBinding FontSize}" VerticalAlignment="Stretch" Width="32" />
                         </StackPanel>
                         
                         <FontIcon
