--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -53,7 +53,7 @@
                             <controls:FiltrationTextBox Margin="0,0" 
                                                         MinWidth="300"
                                                         VerticalAlignment="Center"
-                                                        HorizontalAlignment="Left"
+                                                        HorizontalAlignment="Stretch"
                                                         PlaceholderText="{loc:StringResource Key=SearchPasswords}"/>
 
                             <CommandBar IsOpen="False"
