refactor: change the search box to be a content control instead of a user one
refs: #25

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -50,11 +50,18 @@
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
 
-                            <controls:FiltrationTextBox Margin="0,0" 
+                            <!--<controls:FiltrationTextBox Margin="0,0" 
                                                         MinWidth="300"
                                                         VerticalAlignment="Center"
                                                         HorizontalAlignment="Stretch"
-                                                        PlaceholderText="{loc:StringResource Key=SearchPasswords}"/>
+                                                        PlaceholderText="{loc:StringResource Key=SearchPasswords}"/>-->
+
+                            <controls:SearchTextBox MinWidth="300"
+                                                    VerticalAlignment="Center"
+                                                    HorizontalAlignment="Stretch"
+                                                    PlaceholderText="{loc:StringResource Key=SearchPasswords}"/>
+
+
 
                             <CommandBar IsOpen="False"
                                         Grid.Column="1" 
