--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
@@ -19,6 +19,7 @@
                         
                         <ResourceDictionary Source="Controls/ValidationTextBox.xaml" />
                         <ResourceDictionary Source="Controls/ValidationPasswordBox.xaml" />
+                        <ResourceDictionary Source="Controls/SearchTextBox.xaml" />
                     </ResourceDictionary.MergedDictionaries>
 
                     <converters:NullOrEmptyToCollapsedConverter x:Key="NullOrEmptyToCollapsedConverter"/>
