feat(password-search): add a search button to the box
#25

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -50,18 +50,11 @@
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
 
-                            <!--<controls:FiltrationTextBox Margin="0,0" 
-                                                        MinWidth="300"
-                                                        VerticalAlignment="Center"
-                                                        HorizontalAlignment="Stretch"
-                                                        PlaceholderText="{loc:StringResource Key=SearchPasswords}"/>-->
-
                             <controls:SearchTextBox MinWidth="300"
                                                     VerticalAlignment="Center"
                                                     HorizontalAlignment="Stretch"
+                                                    SearchCommand="{Binding Path=SearchCommand}"
                                                     PlaceholderText="{loc:StringResource Key=SearchPasswords}"/>
-
-
 
                             <CommandBar IsOpen="False"
                                         Grid.Column="1" 
