--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -36,8 +36,7 @@
                                Text="{loc:StringResource Key=MyPasswords}"
                                Style="{StaticResource HeaderTextBlockStyle}"/>
 
-                    <Grid Grid.Row="1"
-                          Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter}, FallbackValue=Visible}">
+                    <Grid Grid.Row="1">
 
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -54,12 +53,15 @@
                                                     VerticalAlignment="Center"
                                                     HorizontalAlignment="Stretch"
                                                     SearchCommand="{Binding Path=SearchCommand}"
-                                                    PlaceholderText="{loc:StringResource Key=SearchPasswords}"/>
+                                                    Text="{Binding Path=SearchText, Mode=TwoWay}"
+                                                    PlaceholderText="{loc:StringResource Key=SearchPasswords}"
+                                                    Visibility="{Binding Path=ShowInitialScreen, Converter={StaticResource BoolToVisibilityConvereter}, ConverterParameter=reverse}"/>
 
                             <CommandBar IsOpen="False"
                                         Grid.Column="1" 
                                         Background="Transparent"
-                                        DefaultLabelPosition="Right">
+                                        DefaultLabelPosition="Right"
+                                        Visibility="{Binding Path=ShowInitialScreen, Converter={StaticResource BoolToVisibilityConvereter}, ConverterParameter=reverse}">
 
                                 <AppBarButton Icon="Add" 
                                               LabelPosition="Collapsed"
@@ -88,16 +90,23 @@
                         </Grid>
 
                         <Grid Grid.Row="1"
-                              Margin="10">
+                              Margin="10"
+                              Visibility="{Binding Path=ShowInitialScreen, Converter={StaticResource BoolToVisibilityConvereter}, ConverterParameter=reverse, FallbackValue=Collapsed}">
                             <TreeView x:Name="PasswordsTreeView" 
                                       ItemsSource="{Binding Path=Passwords}"                                      
                                       ItemContainerStyle="{StaticResource MUX_TreeViewItemStyle}"
-                                      ItemTemplateSelector="{StaticResource PasswordExplorerItemTemplateSelector}" />
+                                      ItemTemplateSelector="{StaticResource PasswordExplorerItemTemplateSelector}"
+                                      Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter}, FallbackValue=Visible}" />
+
+                            <TextBlock Text="{loc:StringResource Key=NoPasswordsFound}"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"
+                                       Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter}, ConverterParameter=reverse, FallbackValue=Visible}"/>
                         </Grid>
                     </Grid>
 
                     <Grid Grid.Row="1"
-                          Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter},ConverterParameter=reverse, FallbackValue=Collapsed}">
+                          Visibility="{Binding Path=ShowInitialScreen, Converter={StaticResource BoolToVisibilityConvereter}, FallbackValue=Collapsed}">
                         <StackPanel Orientation="Vertical"
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center">
