feat(settings): add an "about" section into settings

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
@@ -21,6 +21,8 @@
                         <ResourceDictionary Source="Controls/ValidationPasswordBox.xaml" />
                     </ResourceDictionary.MergedDictionaries>
 
+                    <x:String x:Key="AppTitleName">Pango</x:String>
+
                     <converters:NullOrEmptyToCollapsedConverter x:Key="NullOrEmptyToCollapsedConverter"/>
                     <converters:BoolToVisibilityConvereter x:Key="BoolToVisibilityConvereter"/>
                     <converters:EmptyStringToRootFolderNameConverter x:Key="EmptyStringToRootFolderNameConverter"/>
