--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
@@ -1,12 +1,13 @@
 ﻿<abstract:PageBase
-    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     x:Class="Pango.Desktop.Uwp.Views.SettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:toolkit="using:CommunityToolkit.WinUI.Controls"
+    xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     d:DataContext="{d:DesignInstance Type=viewmodels:SettingsViewModel}"
     mc:Ignorable="d"
     d:DesignHeight="300"
@@ -76,11 +77,38 @@
 
                 <!--Other Section-->
                 <StackPanel Orientation="Vertical">
-                    <TextBlock Text="{loc:StringResource Key='Other'}"
-                               Style="{StaticResource SectionSubtitleTextBlockStyle}"/>
-                    <ToggleSwitch IsOn="{Binding AllowLaunchAtStartup}"
-                                  Margin="{StaticResource ControlSectionMargin}"
-                                  Header="{loc:StringResource Key='LaunchAtStartup'}"/>
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock Text="{loc:StringResource Key='Other'}"
+                                   Style="{StaticResource SectionSubtitleTextBlockStyle}"/>
+                        <ToggleSwitch IsOn="{Binding AllowLaunchAtStartup}"
+                                      Margin="{StaticResource ControlSectionMargin}"
+                                      Header="{loc:StringResource Key='LaunchAtStartup'}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Vertical"
+                                Margin="{StaticResource ControlSectionMargin}">
+                        <TextBlock Text="{loc:StringResource Key=AboutApp}"
+                                   Style="{StaticResource BodyTextBlockStyle}"/>
+                        <toolkit:SettingsExpander Header="{StaticResource AppTitleName}" 
+                                                  Margin="0 10 0 30"
+                                                  Description="© 2024 Cats Lab. All rights reserved.">
+                            <toolkit:SettingsExpander.HeaderIcon>
+                                <BitmapIcon ShowAsMonochrome="False" UriSource="/Assets/StoreLogo.scale-400.png" />
+                            </toolkit:SettingsExpander.HeaderIcon>
+                            <TextBlock Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                                       IsTextSelectionEnabled="True"
+                                       Text="{Binding Version}" />
+                            <toolkit:SettingsExpander.Items>
+                                <toolkit:SettingsCard x:Name="bugRequestCard"
+                                                      Click="bugRequestCard_Click"
+                                                      Header="File a bug or request new sample"
+                                                      IsClickEnabled="True">
+                                    <toolkit:SettingsCard.ActionIcon>
+                                        <FontIcon Glyph="&#xE8A7;" />
+                                    </toolkit:SettingsCard.ActionIcon>
+                                </toolkit:SettingsCard>
+                            </toolkit:SettingsExpander.Items>
+                        </toolkit:SettingsExpander>
+                    </StackPanel>
                 </StackPanel>
             </StackPanel>
         </ScrollViewer>
