fix: make items hidden if it don't fit the query

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -15,7 +15,6 @@
     d:DataContext="{d:DesignInstance Type=viewmodels:PasswordsViewModel}"
     d:DesignHeight="300"
     d:DesignWidth="400">
-
     <Page.Resources>
         <Style TargetType="TreeViewItem"
                BasedOn="{StaticResource ListViewItemRevealStyle}"
@@ -29,7 +28,7 @@
             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="TreeViewItem">
+                    <ControlTemplate TargetType="TreeViewItem">                        
                         <Grid x:Name="ContentPresenterGrid" Margin="0,0,0,0" 
                               Background="{TemplateBinding Background}" 
                               BorderBrush="{TemplateBinding BorderBrush}"
@@ -201,7 +200,7 @@
 
         <DataTemplate x:Name="FolderTemplate">
             <TreeViewItem AutomationProperties.Name="{Binding Name}"
-                          ItemsSource="{Binding Children}" IsExpanded="True">
+                          ItemsSource="{Binding Children}" IsExpanded="True" Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
                 <TreeViewItem.ContextFlyout>
                     <MenuFlyout>
                         <MenuFlyoutItem x:Name="Edit_CatalogContextMenuItem" Text="Edit" Icon="Edit" Click="EditContextMenuItem_Click"/>
@@ -223,7 +222,9 @@
         <DataTemplate x:Name="FileTemplate">
             <TreeViewItem HorizontalAlignment="Stretch" 
                           HorizontalContentAlignment="Stretch"
-                          AutomationProperties.Name="{Binding Name}">
+                          AutomationProperties.Name="{Binding Name}"
+                          Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
+                
                 <TreeViewItem.ContextFlyout>
                     <MenuFlyout >
                         <MenuFlyoutItem x:Name="EditPassword_PasswordContextMenuItem" Text="Edit" Icon="Edit" Click="EditContextMenuItem_Click"/>
@@ -351,6 +352,7 @@
                                       ItemContainerStyle="{StaticResource MUX_TreeViewItemStyle}"
                                       ItemTemplateSelector="{StaticResource PasswordExplorerItemTemplateSelector}"
                                       Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter}, FallbackValue=Visible}">
+                                
                             </TreeView>
 
                             <TextBlock Text="{loc:StringResource Key=NoPasswordsFound}"
