fix: apply text resource for the context menu

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -203,11 +203,11 @@
                           ItemsSource="{Binding Children}" IsExpanded="True" Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
                 <TreeViewItem.ContextFlyout>
                     <MenuFlyout>
-                        <MenuFlyoutItem x:Name="Edit_CatalogContextMenuItem" Text="Edit" Icon="Edit" Click="EditContextMenuItem_Click"/>
-                        <MenuFlyoutItem x:Name="Delete_CatalogContextMenuItem" Text="Delete" Icon="Delete" Click="DeleteContextMenuItem_Click"/>
+                        <MenuFlyoutItem x:Name="Edit_CatalogContextMenuItem" Text="{loc:StringResource Key=Edit}" Icon="Edit" Click="EditContextMenuItem_Click"/>
+                        <MenuFlyoutItem x:Name="Delete_CatalogContextMenuItem" Text="{loc:StringResource Key=Delete}" Icon="Delete" Click="DeleteContextMenuItem_Click"/>
                         <MenuFlyoutSeparator/>
-                        <MenuFlyoutItem x:Name="AddPassword_CatalogContextMenuItem" Text="Add a password" Icon="Add" Click="AddPassword_CatalogContextMenuItem_Click"/>
-                        <MenuFlyoutItem x:Name="AddCatalog_CatalogContextMenuItem" Text="Add a catalog" Icon="NewFolder" Click="AddCatalog_CatalogContextMenuItem_Click"/>
+                        <MenuFlyoutItem x:Name="AddPassword_CatalogContextMenuItem" Text="{loc:StringResource Key=AddPassword}" Icon="Add" Click="AddPassword_CatalogContextMenuItem_Click"/>
+                        <MenuFlyoutItem x:Name="AddCatalog_CatalogContextMenuItem" Text="{loc:StringResource Key=AddNewCatalog}" Icon="NewFolder" Click="AddCatalog_CatalogContextMenuItem_Click"/>
                     </MenuFlyout>
                 </TreeViewItem.ContextFlyout>
                 <StackPanel Orientation="Horizontal">
@@ -227,10 +227,10 @@
                 
                 <TreeViewItem.ContextFlyout>
                     <MenuFlyout >
-                        <MenuFlyoutItem x:Name="EditPassword_PasswordContextMenuItem" Text="Edit" Icon="Edit" Click="EditContextMenuItem_Click"/>
-                        <MenuFlyoutItem x:Name="DeletePassword_PasswordContextMenuItem" Text="Delete" Icon="Delete" Click="DeleteContextMenuItem_Click"/>
+                        <MenuFlyoutItem x:Name="EditPassword_PasswordContextMenuItem" Text="{loc:StringResource Key=Edit}" Icon="Edit" Click="EditContextMenuItem_Click"/>
+                        <MenuFlyoutItem x:Name="DeletePassword_PasswordContextMenuItem" Text="{loc:StringResource Key=Delete}" Icon="Delete" Click="DeleteContextMenuItem_Click"/>
                         <MenuFlyoutSeparator/>
-                        <MenuFlyoutItem x:Name="CopyPassword_PasswordContextMenuItem" Text="Copy" Icon="Copy" Click="CopyPassword_PasswordContextMenuItem_Click"/>
+                        <MenuFlyoutItem x:Name="CopyPassword_PasswordContextMenuItem" Text="{loc:StringResource Key=CopyPassword}" Icon="Copy" Click="CopyPassword_PasswordContextMenuItem_Click"/>
                     </MenuFlyout>
                 </TreeViewItem.ContextFlyout>
                 <Grid HorizontalAlignment="Stretch">
